issue#135 minyawns feedback text made readable

--- a/wp-content/themes/minyawns/css/main.css
+++ b/wp-content/themes/minyawns/css/main.css
@@ -6990,3 +6990,10 @@ p.white {
   font-size: 14px;
 }
 /*minyawns directory invite popup ends*/
+/*minyawns rating popover starts*/
+.popover-box textarea {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+/*minyawns rating popover ends*/
